<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:padding="32dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_store"
        android:textSize="32sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ln_userName"
            android:layout_marginTop="72dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:background="@drawable/custom_linear_layout_border">

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_userName"
                android:background="@null"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_password"
            android:layout_below="@+id/ln_userName"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:background="@drawable/custom_linear_layout_border">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:hint="@string/prompt_password"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:background="@null"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/swch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/>

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_below="@+id/ln_password"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_login_button"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_red_button"/>



    </LinearLayout>

</RelativeLayout>