<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.MainActivity">


    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/llayout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/my_store"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ln_rv"
        android:layout_below="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="1dp"
        android:gravity="center"
        android:layout_above="@+id/ln_buttons"
        android:layout_marginBottom="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_myStore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" >
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_buttons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp">


        <Button
            android:id="@+id/btn_myOrders"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/my_orders"
            android:textColor="@color/colorAccent"
            android:background="@drawable/custom_red_border_button"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/log_out"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_red_button"/>

    </LinearLayout>


</RelativeLayout>